--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -1,5 +1,4 @@
-﻿@using MVC.Presentacion.Models.OrdenCompra;
-@model OrdenCompraModel
+﻿@model MVC.Presentacion.Models.OrdenCompra.OrdenCompraModel
 <!DOCTYPE html>
 
 <html>
@@ -680,7 +679,7 @@
             </div>
         </section>
         <div class="modal fade" id="ModalConfirmacion" tabindex="-1" role="dialog">
-            <div class="modal-dialog modal-sm margin-0" role="document">
+            <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="title" id="ModalConfirmacionLabel">¿Esta seguro?</h4>
