--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/OrdenCompraProductoDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/OrdenCompraProductoDTO.cshtml
@@ -1,10 +1,10 @@
-﻿@model MVC.Presentacion.Models.OrdenCompra.OrdenCompraProductoCrearDTO
+﻿@model MVC.Presentacion.Models.OrdenCompra.OrdenCompraProductoDTO
 <tr>
     <td>@Model.TipoProducto</td>
     <td>@Model.Producto</td>
-    <td>@Model.Cantidad</td>
+    <td>@Model.CantidadAComprar</td>
     <td>@Model.UnidadMedida</td>
-    <td>@Model.Descripcion</td>
+    <td>@Model.Aplicacion</td>
     <td>@Model.CentroCosto</td>
     <td>@Model.CuentaContable</td>
     <td>@Model.Precio</td>
