--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PuntoVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PuntoVenta/Index.cshtml
@@ -10,56 +10,83 @@
 <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
 
 <script type="text/javascript">
-    //$(document).ready(function () {     
+    //$(document).ready(function () {
     //});
 
     function GetListInit() {
         //debugger
         //var _lstInit = [];
         //$('#tblChoferes tbody tr').each(function () {
-          
+
         //   //var value = $(this).find('td option:selected').val();
         //    var value = $(this).find('td:nth-child(4)').text();
         //    _lstInit.push(value);
         //});
         //alert(_lstId);
-              
-           }
+
+    }
     $(function () {
         $('select').on('change', function () {
             debugger
+            $('#tblChoferes tbody tr td:eq(' + 3 + ')').css("background-color", "none");
+            
             var _lstId = [];
-           // var _lstrows = [];
+
+            var _lstrows = [];
+
+            var getIdRepeat = -1;
+
+            var currentIndexSelect = $('#tblChoferes tbody tr')[0].rowIndex;
+            var currentSelect = $('#tblChoferes tbody tr:eq(' + currentIndexSelect + ')').find('td option:selected').val()
+          
             ////collect the values from selected;
             $('#tblChoferes tbody tr').each(function () {
-                // var customerId = $(this).find("#idtd").html();
+                //var customerId = $(this).find("#idtd").html();
                 var value = $(this).find('td option:selected').val();
-                //var idRow = $(this.id);
-                //_lstrows.push(idRow);
+
+                var rowindex = $(this).index();
+
+                _lstrows.push(rowindex);
                 _lstId.push(value);
+                if (value == currentSelect) {
+                    if (currentIndexSelect != rowindex) {
+                        //
+                        getIdRepeat = $(this).index();
+                        //  $(this).parent('select').eq(0).attr('selected', 'selected')//.val($(this).val())
+                        // $('#selectBox > option').eq(index).attr('selected', 'selected')
+                        return false;
+                    }
+                }
+
             });
-            alert(_lstId);
-           // alert(_lstrows);
+
             var uniq = _lstId.map((name) => { return { count: 1, name: name } }).reduce((a, b) => {
                 a[b.name] = (a[b.name] || 0) + b.count
                 return a
             }, {})
-  
+
             var duplicates = Object.keys(uniq).filter((a) => uniq[a] > 1)
-                    
+
             var isMyObjectEmpty = !Object.keys(duplicates).length;
 
-            if (!isMyObjectEmpty) {
-               
+            //if (!isMyObjectEmpty) {
+            if (getIdRepeat >= 0) {
+
                 var currentSelect = $('#tblChoferes tbody tr').find('td option:selected').val()
                 var currentId = $('#tblChoferes tbody tr')[0].rowIndex;
-               // $(this).closest('tr')[0].rowIndex
-               
-                if (duplicates == currentSelect) {
-                    myFunction(currentSelect);
-                    //$("#tblChoferes tr td:nth-child(4):first").css("background-color", "red");
-                    //$("#tblChoferes tbody tr td option[value=0]").attr('selected', 'selected');
-                }
+
+
+                //if (duplicates == currentSelect) {
+                //myFunction(currentSelect);
+                // $('#tblChoferes tbody tr:eq(' + getIdRepeat + ') td:eq(' + 3 + ') option[value=0]').attr('selected', 'selected');
+                $('#tblChoferes tbody tr:eq(' + getIdRepeat + ') td:eq(' + 3 + ')').css("background-color", "red");
+
+                //$("#tblChoferes tr td:nth-child(4):first").css("background-color", "red");
+                //$("#tblChoferes tbody tr td option[value=0]").attr('selected', 'selected');
+
+                //$("#tblChoferes tr td:nth-child(4):first").css("background-color", "red");
+                //$("#tblChoferes tbody tr td option[value=0]").attr('selected', 'selected');
+                //}
             }
 
             /********************************/
@@ -163,7 +190,7 @@
                                                         <td>@item.OperadorChofer</td>
                                                     }
                                                     <td>
-                                                        <a ID="lbEdit" onclick="GetListInit()" href="@Url.Action("AsignarChofer", "PuntoVenta" , new { idE = item.IdEmpresa,id=item.IdPuntoVenta })">
+                                                        <a ID="lbEdit" href="@Url.Action("AsignarChofer", "PuntoVenta" , new { idE = item.IdEmpresa,id=item.IdPuntoVenta })">
                                                             <i class="material-icons">edit</i>
                                                             <span class="icon-name"></span>
                                                         </a>
