JSA-27/09/2018 - Almacen entradas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Content/Site.css
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Content/Site.css
@@ -22,3 +22,16 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.pagination-container > ul > li > a {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.428571429;
+    text-decoration: none;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+}
+
+
