--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/EntradaMercancia.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/EntradaMercancia.cshtml
@@ -10,9 +10,18 @@
     <div class="container-fluid">
         @using (Html.BeginForm("CrearCategoria", "Producto", FormMethod.Post))
         {
+            @Html.HiddenFor(m => m.IdEmpresa)
+            @Html.HiddenFor(m => m.Empresa)
+            @Html.HiddenFor(m => m.IdOrdenCompra)
+            @Html.HiddenFor(m => m.IdRequisicion)
+            @Html.HiddenFor(m => m.UsuarioSolicitante)
+            @Html.HiddenFor(m => m.FechaRequerida)
+            @Html.HiddenFor(m => m.MotivoRequisicion)
+            @Html.HiddenFor(m => m.RequeridoEn)
+            @Html.HiddenFor(m => m.Proveedor)
             <div class="block-header">
                 <div class="row">
-                    <div class="col-lg-5 col-md-5 col-sm-12">
+                    <div class="col-sm-12">
                         <h2>Entradas</h2>
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
@@ -26,24 +35,25 @@
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
                             <div class="header">
-                                <h2><strong>Crear</strong> nueva categoría</h2>
+                                <h2><strong>Registra</strong> la entrada de mercancia</h2>
                             </div>
                             <div class="body">
                                 <div class="row clearfix">
                                     <div class="col-sm-4">
                                         <div class="form-group">
-                                            @Html.LabelFor(m => m.Empresa)
+                                            <b>Gasera</b>
+                                            @Html.LabelFor(m => m.Empresa, Model.Empresa)
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <b>Número de Requisición:</b>&nbsp;
-                                                @Html.LabelFor(m => m.NumeroRequisicion)
+                                                @Html.LabelFor(m => m.NumeroRequisicion, Model.NumeroRequisicion)
                                             </div>
                                             <div class="input-group">
                                                 <b>Número de Orden de Compra:</b>&nbsp;
-                                                @Html.LabelFor(m => m.NumOrdenCompra)
+                                                @Html.LabelFor(m => m.NumOrdenCompra, Model.NumOrdenCompra)
                                             </div>
                                         </div>
                                     </div>
@@ -81,18 +91,65 @@
                                 <div class="row clearfix">
                                     <div class="col-sm-4">
                                         <div class="form-group">
-                                            <div class="input-group">
+                                            <div class="form-group">
                                                 <b>Proveedor:</b>&nbsp;
                                                 @Html.TextBoxFor(m => m.Proveedor, new { @class = "form-control", @disabled = "disabled" })
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-4">
-                                        <b>Date</b>
+                                    <div class="col-sm-3">
+                                        <b>Fecha de entrada</b>
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="zmdi zmdi-calendar"></i> </span>
-                                            @Html.TextBoxFor(m => m.FechaEntrada, new { @class = "form-control date", @placeholder = "Ej: 30/07/2016" })
+                                            @Html.TextBoxFor(m => m.FechaEntrada, new { @class = "form-control date", @placeholder = "Ej: 30/07/2018" })
                                         </div>
+                                        @Html.ValidationMessageFor(m => m.FechaEntrada, "", new { @class = "alert-danger" })
+                                    </div>
+                                </div>
+                                @if (ViewBag.MensajeError != null)
+                                {
+                                    <div class="row clearfix">
+                                        <div id="divMensajeError" class="container">
+                                            <div class="alert alert-danger">
+                                                <div class="alert-icon">
+                                                    <i class="zmdi zmdi-block"></i>
+                                                </div>
+                                                <strong>
+                                                    <label>@ViewBag.MensajeError</label>
+                                                </strong>
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                                <div class="row clearfix blockquote blockquote-info btn-round">
+                                    <div class="table-responsive">
+                                        <table class="table table-hover">
+                                            <thead>
+                                                <tr>
+                                                    <td><b>Tipo</b></td>
+                                                    <td><b>Producto</b></td>
+                                                    <td><b>Requeridos</b></td>
+                                                    <td><b>Unidad</b></td>
+                                                    <td><b>Detalle</b></td>
+                                                    <td><b>Cantidada</b></td>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @Html.EditorFor(m => m.Productos)
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="row clearfix">
+                                    <div class="col-lg-6 col-md-8 text-center">
+                                        <a href="@Url.Action("Ordenes", "OrdenCompra" )" ID="btnRegresar" class="btn btn-raised btn-primary btn-round" Text="Regresar">
+                                            Regresar
+                                        </a>
+                                    </div>
+                                    <div class="col-lg-6 col-md-8 text-center">
+                                        <button btn id="BtnAceptar" formaction="RegistrarEntrada" class="btn btn-primary btn-round">
+                                            Acepatar
+                                        </button>
                                     </div>
                                 </div>
                             </div>
