--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
@@ -43,44 +43,47 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="body row clearfix">
-                            <div class="table-responsive">
-                                <table class="table table table-bordered table-striped table-hover js-basic-example dataTable">
-                                    <thead>
-                                        <tr>
-                                            <td><b>Gasera</b></td>
-                                            <td><b>N° Requisición</b></td>
-                                            <td><b>Fecha Requerida</b></td>
-                                            <td><b>Solicitante</b></td>
-                                            <td><b>Estatus</b></td>
-                                            <td><b>Accion</b></td>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var _req in ViewBag.Requisiciones)
-                                        {
-                                            <tr>
-                                                <td>@_req.NombreComercial</td>
-                                                <td>@_req.NumeroRequisicion</td>
-                                                <td>@_req.FechaRequerida</td>
-                                                <td>@_req.UsuarioSolicitante</td>
-                                                <td>@_req.RequisicionEstatus</td>
-                                                <td>
-                                                    <a ID="lblAction" href="@Url.Action("OrdenCompra", "OrdenCompra", new { id = _req.IdRequisicion })">
-                                                        <i class="material-icons">launch</i>
-                                                        <span class="icon-name"></span>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-                            </div>
+                        <div class="body">
                             <div class="row clearfix">
-                                <div class="col-md-6">
+                                <div class="table-responsive">
+                                    <table class="table table table-bordered table-striped table-hover js-basic-example dataTable">
+                                        <thead>
+                                            <tr>
+                                                <td><b>Gasera</b></td>
+                                                <td><b>N° Requisición</b></td>
+                                                <td><b>Fecha Requerida</b></td>
+                                                <td><b>Solicitante</b></td>
+                                                <td><b>Estatus</b></td>
+                                                <td><b>Accion</b></td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var _req in ViewBag.Requisiciones)
+                                            {
+                                                <tr>
+                                                    <td>@_req.NombreComercial</td>
+                                                    <td>@_req.NumeroRequisicion</td>
+                                                    <td>@_req.FechaRequerida</td>
+                                                    <td>@_req.UsuarioSolicitante</td>
+                                                    <td>@_req.RequisicionEstatus</td>
+                                                    <td>
+                                                        <a ID="lblAction" href="@Url.Action("OrdenCompra", "OrdenCompra", new { id = _req.IdRequisicion })">
+                                                            <i class="material-icons">launch</i>
+                                                            <span class="icon-name"></span>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="row clearfix text-center">
+                                <div class="col-md-5">
                                     Pagina @(ViewBag.Requisiciones.PageCount < ViewBag.Requisiciones.PageNumber ? 0 : ViewBag.Requisiciones.PageNumber) de @ViewBag.Requisiciones.PageCount
                                 </div>
-                                <div class="col-md-6 text-right">
+                                <div class="col-md-2"></div>
+                                <div class="col-md-5">
                                     @Html.PagedListPager((IPagedList)ViewBag.Requisiciones, pageR => Url.Action("Ordenes", new { pageR, @class = "btn btn-primary btn-simple" }))
                                 </div>
                             </div>
@@ -195,7 +198,7 @@
                                                         }
                                                         @if (_oc.IdOrdenCompraEstatus.Equals(OrdenCompraEstatusEnum.Proceso_compra))
                                                         {
-                                                            <a ID="lbAgregarMercancia" href="@Url.Action("OrdenCompra", "OrdenCompra", new { id = _oc.IdOrdenCompra })">
+                                                            <a ID="lbAgregarMercancia" href="@Url.Action("EntradaMercancia", "OrdenCompra", new { idOrden = _oc.IdOrdenCompra })">
                                                                 <i class="material-icons"> assignment_turned_in</i>
                                                                 <span class="icon-name"></span>
                                                             </a>
@@ -206,7 +209,7 @@
                                                         }
                                                         @if (_oc.IdOrdenCompraEstatus.Equals(OrdenCompraEstatusEnum.Compra_exitosa) || _oc.OrdenCompraEstatus.Equals(OrdenCompraEstatusEnum.Compra_cancelada))
                                                         {
-                                                            <a ID="lbVisualizarOC" href="@Url.Action("", "OrdenCompra", new { id = _oc.IdOrdenCompra })">
+                                                            <a ID="lbVisualizarOC" href="@Url.Action("OrdenCompraResumen", "OrdenCompra", new { id = _oc.IdOrdenCompra })">
                                                                 <i class="material-icons">remove_red_eye</i>
                                                                 <span class="icon-name"></span>
                                                             </a>
@@ -218,11 +221,12 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="row clearfix">
-                                <div class="col-md-6">
+                            <div class="row clearfix text-center">
+                                <div class="col-md-5">
                                     Pagina @(ViewBag.Ordenes.PageCount < ViewBag.Ordenes.PageNumber ? 0 : ViewBag.Ordenes.PageNumber) de @ViewBag.Ordenes.PageCount
                                 </div>
-                                <div class="col-md-6 text-right">
+                                <div class="col-md-2"></div>
+                                <div class="col-md-5">
                                     @Html.PagedListPager((IPagedList)ViewBag.Ordenes, pageO => Url.Action("Ordenes", new { pageO, @class = "btn btn-primary btn-simple" }))
                                 </div>
                             </div>
@@ -233,5 +237,3 @@
         </section>
     }
 </body>
-
-
