--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -175,11 +175,12 @@
                                             </table>
                                         </div>
                                     </div>
-                                    <div class="row clearfix">
-                                        <div class="col-md-6">
+                                    <div class="row clearfix text-center">
+                                        <div class="col-md-5">
                                             Pagina @(ViewBag.Requisiciones.PageCount < ViewBag.Requisiciones.PageNumber ? 0 : ViewBag.Requisiciones.PageNumber) de @ViewBag.Requisiciones.PageCount
                                         </div>
-                                        <div class="col-md-6 text-right">
+                                        <div class="col-md-2"></div>
+                                        <div class="col-md-5">
                                             @Html.PagedListPager((IPagedList)ViewBag.Requisiciones, page => Url.Action("Requisiciones", new { page }), PagedListRenderOptions.OnlyShowFivePagesAtATime)
                                         </div>
                                     </div>
