--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -532,3 +532,4 @@
 @*<script src="~/assets/bundles/libscripts.bundle.js"></script>*@
 <script src="~/assets/bundles/vendorscripts.bundle.js"></script>
 <script src="~/assets/bundles/mainscripts.bundle.js"></script>
+@Styles.Render("~/Content/css")
