JOTM-27/09/2018-Ventana de corte de caja
* Pasos para corte de caja
* Queda pendiente métodos rest y actualizar texto de reporte

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_ver_reporte.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_ver_reporte.xml
@@ -40,7 +40,9 @@
                     android:drawableStart="@drawable/ic_go_back_dark"
                     android:text="@string/terminar"
                     android:textColor="@color/colorTextButtonLogin"
-                    android:visibility="gone" />
+                    android:textSize="30sp"
+                    android:visibility="gone"
+                    tools:ignore="ButtonStyle,UnusedAttribute" />
 
                 <Button
                     android:id="@+id/BtnReporteActivityImprimir"
@@ -48,9 +50,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:backgroundTint="@color/colorButtonLogin"
-                    android:textColor="@color/colorTextButtonLogin"
                     android:text="@string/imprimir_reporte"
-                    tools:ignore="UnusedAttribute" />
+                    android:textColor="@color/colorTextButtonLogin"
+                    android:textSize="30sp"
+                    tools:ignore="ButtonStyle,UnusedAttribute" />
             </LinearLayout>
 
         </LinearLayout>
