--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
@@ -24,24 +24,35 @@
                 android:textAlignment="center"
                 android:textSize="24sp" />
 
-            <ScrollView
+            <Spinner
+                android:id="@+id/SPAnticipoTablaActivityFechaCorte"
                 android:layout_width="match_parent"
-                android:layout_height="430dp"
-                tools:ignore="NestedScrolling">
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:visibility="gone" />
 
-                <LinearLayout
+            <ScrollView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="300dp"
+                android:scrollbars="vertical">
+
+                <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
+                    android:layout_height="wrap_content">
                     <TableLayout
                         android:id="@+id/TLAnticipoTablaActivityTabla"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        tools:ignore="UselessLeaf">
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:isScrollContainer="true"
+                        android:scrollbarStyle="outsideOverlay"
+                        android:scrollbars="horizontal"
+                        >
 
                     </TableLayout>
-                </LinearLayout>
+                </HorizontalScrollView>
+
+
             </ScrollView>
 
             <TableLayout
@@ -53,6 +64,16 @@
                     android:layout_height="match_parent"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp">
+
+                    <TextView
+                        android:id="@+id/TVAnticipoTablaActivityP5000"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/p5000"
+                        android:textAlignment="center"
+                        android:textSize="24sp"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/textView2"
@@ -75,6 +96,7 @@
                 </TableRow>
 
                 <TableRow
+                    android:id="@+id/TRAnticipoTablaActivityTituloAnticipo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingTop="15dp"
@@ -84,13 +106,14 @@
                         android:id="@+id/textView3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
+                        android:layout_weight="3"
                         android:text="@string/anticipar"
                         android:textAlignment="center"
                         android:textSize="24sp" />
                 </TableRow>
 
                 <TableRow
+                    android:id="@+id/TRAnticipoTablaActivityFormAnticipar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingTop="5dp"
@@ -102,12 +125,152 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
-                        android:layout_weight="2"
+                        android:layout_weight="3"
                         android:ems="10"
                         android:inputType="numberDecimal"
                         android:textAlignment="textEnd"
                         android:textSize="30sp"
                         tools:ignore="Autofill,LabelFor" />
+                </TableRow>
+
+            </TableLayout>
+
+            <TableLayout
+                android:id="@+id/TLAnticipoTablaActivityResultadosCorteDeCaja"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="@string/Final"
+                        android:textSize="24sp" />
+
+                    <TextView
+                        android:id="@+id/TVAnticipoTableActivityFinal"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text=""
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="@string/anticipos"
+                        android:textSize="24sp" />
+
+                    <TextView
+                        android:id="@+id/TVAnticipoTableActivityAnticipos"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text=""
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="@string/inicial"
+                        android:textSize="24sp" />
+
+                    <TextView
+                        android:id="@+id/TVAnticipoTableActivityInicial"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text=""
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="@string/monto_corte"
+                        android:textSize="24sp" />
+
+                    <TextView
+                        android:id="@+id/TVAnticipoTableMontoDeCorte"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text=""
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2">
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="@string/litros"
+                        android:textSize="24sp" />
+
+                    <TextView
+                        android:id="@+id/TVAnticipoTableActivityLitros"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text=""
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2" />
                 </TableRow>
 
             </TableLayout>
