--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
@@ -120,7 +120,7 @@
                     android:paddingBottom="5dp">
 
                     <EditText
-                        android:id="@+id/editText2"
+                        android:id="@+id/ETAnticipoTablaActivityAnticipo"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="15dp"
